<resources>
    <string name="app_name">Mipan</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_home">Home</string>
    <string name="title_contact">Contact</string>
    <string name="title_jobs">Jobs</string>
    <string name="title_profil">Profil</string>
    <string name="title_events">Events</string>
    <string name="enter_username">Username</string>
    <string name="enter_passwords">Password</string>
    <string name="signup">Signup</string>

    <string name="enter_user_fullname">Name</string>
    <string name="enter_user_phone_number">Phone Number</string>
    <string name="enter_user_email">Mail</string>

    <string name="enter_again_passwords">Enter password again</string>
    <string name="set_birthday">Set Birthday</string>
    <string name="fullname">Fullname</string>
    <string name="email">Email</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="tv_event_name">Event Name</string>
    <string name="description">Description</string>
    <string name="continue_text">Continue</string>
    <string name="please_select_user_type">Please select User type</string>
    <string name="button">Button</string>
    <string name="title">Title</string>
    <string name="company_name">Company Name</string>
    <string name="enter">Enter</string>
    <string name="guest">Guest</string>
    <string name="manage">Manage</string>

</resources>
