<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignUP">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/et_fullname"
<<<<<<< HEAD
            style="@style/Base.Widget.MaterialComponents.TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#105299"
            android:hint="@string/enter_user_fullname"
            android:textAlignment="center"
            android:textAllCaps="true" />

        <EditText
            android:id="@+id/et_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_user_phone_number"
            android:inputType="phone"
            android:textAlignment="center"
            android:textAllCaps="true" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_user_email"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textAllCaps="true" />

=======
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fullname"/>
>>>>>>> 8afb9156c7e5605de660bc953cb95b6a7600bfdf
        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
<<<<<<< HEAD
            android:hint="@string/enter_username"
            android:textAlignment="center"
            android:textAllCaps="true" />

=======
            android:textColorHint="@color/colorRed"
            android:hint="@string/enter_username"/>
>>>>>>> 8afb9156c7e5605de660bc953cb95b6a7600bfdf
        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"/>
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
<<<<<<< HEAD
            android:hint="@string/enter_passwords"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textAllCaps="true" />

=======
            android:textColorHint="@color/colorRed"
            android:hint="@string/enter_passwords"/>
        <EditText
            android:id="@+id/et_re_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_again_passwords"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <androidx.appcompat.widget.AppCompatCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:id="@+id/chk_female"/>
            <androidx.appcompat.widget.AppCompatCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:id="@+id/chk_male"/>
            <androidx.appcompat.widget.AppCompatCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other"
                android:id="@+id/chk_other"/>
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_set_birthday"
            android:text="@string/set_birthday"/>
>>>>>>> 8afb9156c7e5605de660bc953cb95b6a7600bfdf
        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#105299"
            android:text="@string/signup"
            android:textColor="#ffffff"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>