<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".StartActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <EditText
            android:id="@+id/et_start_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBlack"
            android:hint="Username"
            android:textColorHint="@color/colorWhite"
            android:inputType="text"
            android:textColor="@color/colorWhite" />

        <EditText
            android:id="@+id/et_start_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBlack"


            android:textColorHint="@color/colorWhite"
            android:inputType="textPassword"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/btn_enter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter" />

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup" />

        <Button
            android:id="@+id/btn_guest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guest" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>